@@ -22,6 +22,7 @@ Package org.springframework.osgi.context
 
 Package org.springframework.osgi.extender
 * added support for schema handler filtering
+* added filtering support for multiple versions of Spring DM namespaces
 
 
 Changes in version 1.2.0 final (2009-04-09)
